--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -96,26 +96,26 @@
     </nav>
 
     <main>
-        <div class=".container-fluid">
-            <div class="col-md-12 text-dark bg-secondary " id="backgroundPicture">
+        <div class="container">
+            <div class=" col-md-12 text-dark bg-secondary " id="backgroundPicture ">
 
 
                 <fieldset class=".flex-column">
                     <span class="contactpieces">
                         Vegye fel velünk a kapcsolatot:<br />
-                        <a href = "https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src = "./pics/ico/fb_black_50x50.png" alt = "Facebook"><br>
+                        <a href = "https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src = "./pics/ico/fb_black_50x50.png " alt = "Facebook "><br>
                             <strong>Facebook</strong></a>
                       </span>
                     <hr>
-                    <span class="contactpieces">
-                        <img  src="./pics/ico/phone_50x50.png" alt="Image"><br />
+                    <span class="contactpieces ">
+                        <img  src="./pics/ico/phone_50x50.png " alt="Image "><br />
                         <b>06-20-482-3933</b><br />
                     </span>
                     <hr>
-                    <span class="contactpieces">
+                    <span class="contactpieces ">
                         Email küldése:<br />
-                        <a href="mailto:valami@gmail.hu" target="_blank">
-                        <img src="pics/ico/email-sign.png" title="Email a Gólyaműhelynek">
+                        <a href="mailto:valami@gmail.hu " target="_blank ">
+                        <img src="pics/ico/email-sign.png " title="Email a Gólyaműhelynek ">
                         </a>
                     </span>
 
@@ -131,30 +131,42 @@
             <div class="row">
                 <div class="col-sm-6 col-md-3 m-footer-contact">
                     <a class="navbar-brand" href="index.html">
-                        BUDAPEST
+
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020</h6>
                     </a>
-                    <p>
-                        Gólyaműhely<br>
-                    </p>
                 </div>
 
                 <div class="col-sm-6 col-md-3 m-footer-nav">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html">Olajfestmény</a></li>
-                        <li><a href="grafika.html">Grafika</a></li>
-                        <li><a href="mozaik.html">Mozaik</a></li>
-                        <li><a href="butor.html">Bútor</a></li>
-                        <li><a href="mese.html">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html">Mese</a>
+                        </li>
                     </ul>
                 </div>
-
 
                 <div class="col-sm-6 col-md-3 m-footer-nav">
                     <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -162,20 +174,24 @@
                     <strong>Információ</strong>
                     <ul>
 
-                        <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
-                        <li><a href="gyik.html">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html">Linkek</a></li>
-                        <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <!-- <li><a href="kapcsolat.html">Kapcsolat</a></li> -->
-                        <!-- <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
-                        </li> -->
-                        <!-- <img src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933 -->
+                        <li>
+                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                        </li>
+                        <li>
+                            <a href="gyik.html">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html">Kedvencek</a>
+                        </li>
+
                     </ul>
                 </div>
-
-
 
             </div>
             <!---row vége--->
@@ -185,12 +201,12 @@
 
 
 
-    <script src="./js/jquery-3.1.1.slim.min.js"></script>
-    <srcipt src="./js/tether.min.js"></srcipt>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/jquery-3.1.1.slim.min.js "></script>
+    <srcipt src="./js/tether.min.js "></srcipt>
+    <script src="./js/bootstrap.min.js "></script>
+    <script src="./js/app.js "></script>
+    <script src="./js/bootstrap.js "></script>
+    <script src="./js/index.js "></script>
 
 
 
